changes from libkmfl 0.9.12-1 debian package
includes changes for 0.9.12 not in vc

--- a/libkmfl/configure.ac
+++ b/libkmfl/configure.ac
@@ -3,9 +3,12 @@ dnl Created by Anjuta - will be overwritten
 dnl If you don't want it to overwrite it,
 dnl 	Please disable it in the Anjuta project configuration
 
-AC_INIT(configure.in)
-AM_INIT_AUTOMAKE(libkmfl, 0.9.11)
+AC_INIT(libkmfl, 0.9.12)
+AM_INIT_AUTOMAKE
+
 AM_CONFIG_HEADER(config.h)
+
+AC_CONFIG_MACRO_DIR([m4])
 
 AC_ISC_POSIX
 AC_SUBST(CFLAGS,$CFLAGS)
@@ -69,6 +72,21 @@ NO_PREFIX_PACKAGE_MENU_DIR="${packagemenudir}"
 AC_SUBST(NO_PREFIX_PACKAGE_MENU_DIR)
 PACKAGE_MENU_DIR="${packageprefix}/${packagemenudir}"
 AC_SUBST(PACKAGE_MENU_DIR)
+
+AH_TEMPLATE([ENABLE_NLS])
+AH_TEMPLATE([HAVE_CATGETS])
+AH_TEMPLATE([HAVE_GETTEXT])
+AH_TEMPLATE([HAVE_LC_MESSAGES])
+AH_TEMPLATE([HAVE_STPCPY])
+AH_TEMPLATE([HAVE_LIBSM])
+AH_TEMPLATE([PACKAGE_LOCALE_DIR])
+AH_TEMPLATE([PACKAGE_DOC_DIR])
+AH_TEMPLATE([PACKAGE_DATA_DIR])
+AH_TEMPLATE([PACKAGE_PIXMAPS_DIR])
+AH_TEMPLATE([PACKAGE_HELP_DIR])
+AH_TEMPLATE([PACKAGE_MENU_DIR])
+AH_TEMPLATE([PACKAGE_SOURCE_DIR])
+AH_TEMPLATE([GETTEXT_PACKAGE])
 
 AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR, "${packageprefix}/${packagedatadir}")
 AC_DEFINE_UNQUOTED(PACKAGE_DOC_DIR, "${packageprefix}/${packagedocdir}")
