--- a/libkmfl/Makefile.am
+++ b/libkmfl/Makefile.am
@@ -1,10 +1,7 @@
 ## Process this file with automake to produce Makefile.in
-## Created by Anjuta - will be overwritten
-## If you don't want it to overwrite it,
-## 	Please disable it in the Anjuta project configuration
 
 SUBDIRS = include src
-
+ACLOCAL_AMFLAGS = -I m4
 libkmfldocdir = ${prefix}/doc/libkmfl
 libkmfldoc_DATA = \
 	README\
